[COLOR springgreen]Elementum:[/COLOR]

[COLOR red]-------------------------------------------------------------------------------------------------------[/COLOR]

[B][COLOR red]0.1.37[/COLOR][/B]
    - Disabed by default 'Auto-Scrape', so that people won't be banned because of massive requests.
    - Added 'interval' setting for Auto-Scrape.
    - Fixed matching episodes in Anime torrents.

[B][COLOR red]0.1.36[/COLOR][/B]
    - Added Auto-Scrape functionality. It allows to search popular movies in the background and see which one is found on selected trackers. You can choose how to detect movie is available (for example expert to find at least 2 4K torrents, or find at least 3 torrents on each provider). Also possible to add it to the library automatically, and additional "Latest available movies" directory in Movies.
    - Added back auto-cache cleanup periodically.
    - Modifed automatic file selection for Anime shows.
    - Updated torrents library.

[B][COLOR red]0.1.33-35[/COLOR][/B]
    - Fixed Linux ARM platforms.
    - Removed usage of Kodi 'resume playback' parameter as it is often wrong.

[B][COLOR red]0.1.32[/COLOR][/B]
    - [B][COLOR red]This release is removed due to broken work on Linux ARM platforms![/COLOR][/B]
    - Updated libtorrent-go docker images to use Musl+GCC9 for Linux images. Should run on any Linux OS now.
    - Modified automatic next episode starter, to avoid re-writing current episode.
    - Fixed issue with internal DNS client and failed requests because of v6 IPs.
    - Small changes to prioritization function to avoid useless calls to libtorrent.
    - Changed default MaxConnections for libtorrent, from 200 to 80 for multicore devices, 50 to 40 for singlecore devices.
    - Added handling of multiple BluRay directories in the torrent.
    - Made search queries to become on top when selected from history list. 
    - Added selection of files, when added from web. 