@@ -21,11 +21,13 @@
 
         <setting id="download_path" type="folder" label="30001" source="auto" option="writeable" />
         <setting type="action" label="30498" action="RunPlugin(plugin://plugin.video.elementum/cmd/reset_path/download)" />
+
         <setting id="library_path" type="folder" label="30026" default="special://temp/elementum_library/" source="auto" option="writeable" />
         <setting type="action" label="30498" action="RunPlugin(plugin://plugin.video.elementum/cmd/reset_path/library)" />
+        <setting type="action" label="30562" option="close" action="RunPlugin(plugin://plugin.video.elementum/cmd/open_path/library)" />
+
         <setting id="torrents_path" type="folder" label="30451" default="special://temp/elementum_torrents/" source="auto" option="writeable" />
         <setting type="action" label="30498" action="RunPlugin(plugin://plugin.video.elementum/cmd/reset_path/torrents)" />
-        <setting type="action" label="30562" option="close" action="RunPlugin(plugin://plugin.video.elementum/cmd/open_path/library)" />
 
         <setting type="action" label="30452" action="RunPlugin(plugin://plugin.video.elementum/cmd/reset_path)" />
 
